--- a/CristianKulessa.ThomasGregSons/CristianKulessa.ThomasGregSons.WebAuth/CristianKulessa.ThomasGregSons.WebAuth.csproj
+++ b/CristianKulessa.ThomasGregSons/CristianKulessa.ThomasGregSons.WebAuth/CristianKulessa.ThomasGregSons.WebAuth.csproj
@@ -1,21 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Migrations\20200319202006_InitialCreate.cs" />
-    <Compile Remove="Migrations\20200319202006_InitialCreate.Designer.cs" />
-    <Compile Remove="Migrations\20200319202440_InitialCreate.cs" />
-    <Compile Remove="Migrations\20200319202440_InitialCreate.Designer.cs" />
-    <Compile Remove="Migrations\20200319202957_InitialCreate.cs" />
-    <Compile Remove="Migrations\20200319202957_InitialCreate.Designer.cs" />
-    <Compile Remove="Migrations\20200319203313_1.cs" />
-    <Compile Remove="Migrations\20200319203313_1.Designer.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
       <PrivateAssets>all</PrivateAssets>
@@ -30,11 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CristianKulessa.ThomasGregSons.Domain\CristianKulessa.ThomasGregSons.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
+    <ProjectReference Include="..\CristianKulessa.ThomasGregSons.Infrastructure.Data.Auth\CristianKulessa.ThomasGregSons.Infrastructure.Data.Auth.csproj" />
   </ItemGroup>
 
 </Project>
